--- a/index.html
+++ b/index.html
@@ -687,8 +687,8 @@
 }
 
 .top-banner {
-  background: #ffffff;
-  color: #111;
+  background: #8f00ff;
+  color: #fff;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -714,10 +714,11 @@
 }
 
 .top-banner .banner-link {
-  color: #1979d8;
+  color: #fff;
   text-decoration: underline;
   margin-left: 8px;
   white-space: nowrap;
+  font-weight: bold;
 }
 
 body.banner-hidden .top-banner {
