boton ver mas en safety

--- a/productsdetails.html
+++ b/productsdetails.html
@@ -582,7 +582,15 @@
                   <li><i class="bi bi-check-circle"></i> ${translations[lang].product1_feat4}</li>
                   <li><i class="bi bi-check-circle"></i> ${translations[lang].product1_feat5}</li>
                 </ul>
-                ${bookCallButton()}`;
+                <div style="margin-top:30px;text-align:center;width:100%;">
+                  <a href="/safetyshield.html" class="book-call-btn2" target="_blank"
+                     style="display:inline-block;max-width:100%;padding:14px 32px;font-size:18px;">
+                    <span class="book-call-content2">
+                      <span data-i18n="vermas">${translations[lang].vermas}</span>
+                    </span>
+                    <span class="book-call-hover2"></span>
+                  </a>
+                </div>`;
               productImg.src = 'assets/img/safetyshield.png';
               break;
     
