correccion texto en productos

--- a/productsdetails.html
+++ b/productsdetails.html
@@ -576,14 +576,14 @@
                   ${translations[lang].product1_content_desc}
                 </p>
                 <ul>
-                  <li><i class="bi bi-check-circle"></i> ${translations[lang].product1_feat1}</li>
-                  <li><i class="bi bi-check-circle"></i> ${translations[lang].product1_feat2}</li>
-                  <li><i class="bi bi-check-circle"></i> ${translations[lang].product1_feat3}</li>
-                  <li><i class="bi bi-check-circle"></i> ${translations[lang].product1_feat4}</li>
-                  <li><i class="bi bi-check-circle"></i> ${translations[lang].product1_feat5}</li>
+                  <li> ${translations[lang].product1_feat1}</li>
+                  <li> ${translations[lang].product1_feat2}</li>
+                  <li> ${translations[lang].product1_feat3}</li>
+                  <li> ${translations[lang].product1_feat4}</li>
+                  <li> ${translations[lang].product1_feat5}</li>
                 </ul>
                 <div style="margin-top:30px;text-align:center;width:100%;">
-                  <a href="/safetyshield.html" class="book-call-btn2" target="_blank"
+                  <a href="/safetyshield.html" class="book-call-btn2" 
                      style="display:inline-block;max-width:100%;padding:14px 32px;font-size:18px;">
                     <span class="book-call-content2">
                       <span data-i18n="vermas">${translations[lang].vermas}</span>
@@ -602,10 +602,10 @@
                   ${translations[lang].product2_content_desc}
                 </p>
                 <ul>
-                  <li><i class="bi bi-check-circle"></i> ${translations[lang].product2_feat1}</li>
-                  <li><i class="bi bi-check-circle"></i> ${translations[lang].product2_feat2}</li>
-                  <li><i class="bi bi-check-circle"></i> ${translations[lang].product2_feat3}</li>
-                  <li><i class="bi bi-check-circle"></i> ${translations[lang].product2_feat4}</li>
+                  <li> ${translations[lang].product2_feat1}</li>
+                  <li> ${translations[lang].product2_feat2}</li>
+                  <li> ${translations[lang].product2_feat3}</li>
+                  <li> ${translations[lang].product2_feat4}</li>
                 </ul>
                 ${bookCallButton()}`;
               productImg.src = 'assets/img/model-protection.png';
@@ -619,10 +619,10 @@
                   ${translations[lang].product3_content_desc}
                 </p>
                 <ul>
-                  <li><i class="bi bi-check-circle"></i> ${translations[lang].product3_feat1}</li>
-                  <li><i class="bi bi-check-circle"></i> ${translations[lang].product3_feat2}</li>
-                  <li><i class="bi bi-check-circle"></i> ${translations[lang].product3_feat3}</li>
-                  <li><i class="bi bi-check-circle"></i> ${translations[lang].product3_feat4}</li>
+                  <li> ${translations[lang].product3_feat1}</li>
+                  <li> ${translations[lang].product3_feat2}</li>
+                  <li> ${translations[lang].product3_feat3}</li>
+                  <li> ${translations[lang].product3_feat4}</li>
                 </ul>
                 ${bookCallButton()}`;
               productImg.src = 'assets/img/enterprise-security.png';
@@ -636,10 +636,10 @@
                   ${translations[lang].product4_content_desc}
                 </p>
                 <ul>
-                  <li><i class="bi bi-check-circle"></i> ${translations[lang].product4_feat1}</li>
-                  <li><i class="bi bi-check-circle"></i> ${translations[lang].product4_feat2}</li>
-                  <li><i class="bi bi-check-circle"></i> ${translations[lang].product4_feat3}</li>
-                  <li><i class="bi bi-check-circle"></i> ${translations[lang].product4_feat4}</li>
+                  <li> ${translations[lang].product4_feat1}</li>
+                  <li> ${translations[lang].product4_feat2}</li>
+                  <li> ${translations[lang].product4_feat3}</li>
+                  <li> ${translations[lang].product4_feat4}</li>
                 </ul>
                 ${bookCallButton()}`;
               productImg.src = 'assets/img/performance-optimization.png';
