--- a/index.html
+++ b/index.html
@@ -782,7 +782,24 @@ body.banner-hidden .header {
     <!-- Google Tag Manager (cargado de forma asíncrona) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-LD1QMH1MRS"></script>
 
-
+<!-- Meta Pixel Code -->
+<script>
+  !function(f,b,e,v,n,t,s)
+  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+  n.queue=[];t=b.createElement(e);t.async=!0;
+  t.src=v;s=b.getElementsByTagName(e)[0];
+  s.parentNode.insertBefore(t,s)}(window, document,'script',
+  'https://connect.facebook.net/en_US/fbevents.js');
+  fbq('init', '1167028835436926');
+  fbq('track', 'PageView');
+  </script>
+  <noscript><img height="1" width="1" style="display:none"
+  src="https://www.facebook.com/tr?id=1167028835436926&ev=PageView&noscript=1"
+  /></noscript>
+  <!-- End Meta Pixel Code -->  
+  
 </head>
 
 
