--- a/career.html
+++ b/career.html
@@ -30,7 +30,7 @@
 
 
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LD1QMH1MRS"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-MZZJHHYCTR"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
 
@@ -39,7 +39,7 @@
         }
         gtag('js', new Date());
 
-        gtag('config', 'G-LD1QMH1MRS');
+        gtag('config', 'G-MZZJHHYCTR');
     </script>
 <style>  
   /* Language toggle button – minimal & subtle */
