--- a/ccommerce.html
+++ b/ccommerce.html
@@ -11,6 +11,16 @@
 ">
     <meta name="keywords" content="AI security, prompt injection prevention, conversational AI protection, chatbot security, AI privacy compliance, PII protection, AI response monitoring, AI access control, LLM security, AI data protection, conversation security, AI threat detection, prompt security, AI compliance, chatbot protection, AI risk management, AI privacy, AI threat prevention, secure AI interactions, AI security platform">
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-MZZJHHYCTR"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-MZZJHHYCTR');
+    </script>
+
     <!-- Favicons -->
     <link href="assets/img/favicon.webp" rel="icon">
     <link href="assets/img/favicon.webp" rel="apple-touch-icon">
