--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <meta name="description" content="Incorporating artificial intelligence and automated security solutions to help businesses increase ROI and reduce costs.">
     <meta name="keywords" content="advanced technology, technological solutions, technological innovation, software development, artificial intelligence, big data, data analysis, automation, digital transformation, technological services, technology consulting, Ultradeeptech, business technology, IT solutions, cybersecurity, IoT, Internet of Things, machine learning, cloud computing">
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-MZZJHHYCTR"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-MZZJHHYCTR');
+    </script>
+
     <!-- Favicons -->
     <link href="assets/img/favicon.webp" rel="icon">
     <link href="assets/img/favicon.webp" rel="apple-touch-icon">
