--- a/cursos.html
+++ b/cursos.html
@@ -11,6 +11,15 @@
 
     <meta name="keywords" content="seguridad IA, cursos IA, cumplimiento normativo, protección IA, Ultra Deep Tech">
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-MZZJHHYCTR"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-MZZJHHYCTR');
+    </script>
 
     <!-- Favicons -->
     <link href="assets/img/favicon.webp" rel="icon">
