--- a/productsdetails.html
+++ b/productsdetails.html
@@ -29,7 +29,7 @@
     <link href="./assets/css/main.css" rel="stylesheet">
 
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LD1QMH1MRS"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-MZZJHHYCTR"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
 
@@ -38,7 +38,7 @@
         }
         gtag('js', new Date());
 
-        gtag('config', 'G-LD1QMH1MRS');
+        gtag('config', 'G-MZZJHHYCTR');
     </script>
 <style>  
   /* Language toggle button – minimal & subtle */
