test add lucid.html

--- a/cursos.html
+++ b/cursos.html
@@ -127,6 +127,12 @@
                                 </a>
                             </li>
                             <li>
+                                <a href="productsdetails.html?product=product-5" class="nav-link">
+                                    <i class="bi bi-eye-fill"></i>
+                                    <span data-i18n="lucid_platform">Lucid</span>
+                                </a>
+                            </li>
+                            <li>
                                 <a href="productsdetails.html?product=product-2" class="nav-link">
                                     <i class="bi bi-cpu-fill"></i>
                                     <span data-i18n="ai_model_suite">AI Model Protection Suite</span>
