--- a/index.html
+++ b/index.html
@@ -889,6 +889,12 @@ body.banner-hidden .header {
                 </a>
               </li>
               <li>
+                <a href="productsdetails.html?product=product-5" class="nav-link">
+                  <i class="bi bi-eye-fill"></i>
+                  <span data-i18n="lucid_platform">Lucid</span>
+                </a>
+              </li>
+              <li>
                 <a href="productsdetails.html?product=product-2" class="nav-link">
                   <i class="bi bi-cpu-fill"></i>
                   <span data-i18n="ai_model_suite">AI Model Protection Suite</span>
@@ -1449,6 +1455,7 @@ body.banner-hidden .header {
           <h4 data-i18n="footer_products">Products</h4>
           <ul>
             <li><a href="safetyshield.html" data-i18n="safety_shield">Safety Shield Ultra™</a></li>
+            <li><a href="lucid.html" data-i18n="lucid_platform">Lucid</a></li>
             <li><a href="productsdetails.html?product=product-2" data-i18n="ai_model_suite">AI Model Protection Suite</a></li>
             <li><a href="productsdetails.html?product=product-3" data-i18n="enterprise_security">Enterprise AI Security</a></li>
             <li><a href="productsdetails.html?product=product-4" data-i18n="performance_optimization">AI Performance Optimization</a></li>
