--- a/lucid.html
+++ b/lucid.html
@@ -469,7 +469,7 @@
         <div class="col-lg-6 col-md-6" data-aos="fade-up" data-aos-delay="300">
           <div class="feature-card">
             <div class="feature-icon">
-              <i class="bi bi-scale"></i>
+              <i class="bi bi-shield-check"></i>
             </div>
             <h3 data-i18n="lucid_feature_legal_title">Para Equipos Legales</h3>
             <p data-i18n="lucid_feature_legal_desc">Fortalece contratos eliminando sesgos que debilitan casos. Mejora la calidad de tus documentos legales y aumenta las posibilidades de éxito en litigios.</p>
