--- a/productsdetails.html
+++ b/productsdetails.html
@@ -145,7 +145,7 @@
                 </a>
               </li>
               <li>
-                <a href="productsdetails.html?product=product-5" class="nav-link">
+                <a href="lucid.html" class="nav-link">
                   <i class="bi bi-eye-fill"></i>
                   <span data-i18n="lucid_platform">Lucid</span>
                 </a>
@@ -465,7 +465,7 @@
           <h4 data-i18n="footer_products">Products</h4>
           <ul>
             <li><a href="safetyshield.html" data-i18n="safety_shield">Safety Shield Ultra™</a></li>
-            <li><a href="productsdetails.html?product=product-5" data-i18n="lucid_platform">Lucid</a></li>
+            <li><a href="lucid.html" data-i18n="lucid_platform">Lucid</a></li>
             <li><a href="productsdetails.html?product=product-2" data-i18n="ai_model_suite">AI Model Protection Suite</a></li>
             <li><a href="productsdetails.html?product=product-3" data-i18n="enterprise_security">Enterprise AI Security</a></li>
             <li><a href="productsdetails.html?product=product-4" data-i18n="performance_optimization">AI Performance Optimization</a></li>
@@ -677,14 +677,14 @@
                 <div class="lucid-hero">
                   <div class="lucid-logo">
                     <h1 class="lucid-title">Lucid</h1>
-                    <p class="lucid-tagline">Transforma tus Documentos en Decisiones Inteligentes</p>
+                    <p class="lucid-tagline" data-i18n="lucid_tagline">Transforma tus Documentos en Decisiones Inteligentes</p>
                   </div>
-                  <p class="lucid-subtitle">La plataforma líder en análisis de sesgos cognitivos para empresas que buscan la excelencia</p>
+                  <p class="lucid-subtitle" data-i18n="lucid_subtitle">La plataforma líder en análisis de sesgos cognitivos para empresas que buscan la excelencia</p>
                   <div class="lucid-cta">
-                    <a href="https://lucidapp.io" class="lucid-btn-primary" target="_blank">
+                    <a href="https://lucidapp.io" class="lucid-btn-primary" target="_blank" data-i18n="lucid_try_free">
                       Probar Gratis por 30 Días
                     </a>
-                    <a href="lucid.html" class="lucid-btn-primary">
+                    <a href="lucid.html" class="lucid-btn-primary" data-i18n="vermas">
                       Ver Más
                     </a>
                   </div>
