--- a/career.html
+++ b/career.html
@@ -146,7 +146,7 @@
                 </a>
               </li>
               <li>
-                <a href="productsdetails.html?product=product-5" class="nav-link">
+                <a href="lucid.html" class="nav-link">
                   <i class="bi bi-eye-fill"></i>
                   <span data-i18n="lucid_platform">Lucid</span>
                 </a>
