--- a/blog.html
+++ b/blog.html
@@ -260,7 +260,9 @@
           
                 <!-- Toggle de idioma -->
                 <li>
-                    <button id="lang-toggle" class="btn-lang">ES / EN</button>
+                    <button id="lang-toggle" class="btn-lang" title="Cambiar idioma / Change language">
+                      <i class="bi bi-globe2"></i>
+                    </button>
                   </li>
         </ul>
       </nav>
@@ -289,7 +291,7 @@
   <br>
 
   <!-- LinkedIn Call To Action Section -->
-  <section id="call-to-action" class="call-to-action section">
+  <section id="call-to-action" class="call-to-action section particles-white-bg">
     <img src="./assets/img/linkedin.png" alt="">
     <div class="container">
       <div class="row justify-content-start" data-aos="zoom-in" data-aos-delay="100">
@@ -306,7 +308,7 @@
   </section>
   <!-- /LinkedIn CTA -->
 
-  <section id="linkedin-posts" class="linkedin-posts section">
+  <section id="linkedin-posts" class="linkedin-posts section particles-white-bg">
     <div class="container">
       <div class="row">
         <div class="col-lg-4 col-md-12">
@@ -324,7 +326,7 @@
   </section>
 
   <!-- Instagram Call To Action Section -->
-  <section id="call-to-action" class="call-to-action section">
+  <section id="call-to-action" class="call-to-action section particles-white-bg">
     <img src="./assets/img/instagram.png" alt="">
     <div class="container">
       <div class="row justify-content-start" data-aos="zoom-in" data-aos-delay="100">
@@ -341,7 +343,7 @@
   </section>
   <!-- /Instagram CTA -->
 
-  <section id="instagram-tiktok-posts" class="social-media-posts section">
+  <section id="instagram-tiktok-posts" class="social-media-posts section particles-white-bg">
     <!-- Sección para Instagram -->
     <div class="row">
       <div class="col-lg-12 mb-4">
@@ -493,10 +495,10 @@
     <script src="assets/js/cookies.js"></script>
 
 
-    <a href="https://wa.link/2ebre2" class="whatsapp-float" target="_blank" data-aos="fade-up">
-        <i class="bi bi-whatsapp whatsapp-icon"></i>
-        <span class="tooltip-text">Have a Question? Write Us</span>
-
+    <!-- WhatsApp Button -->
+    <a href="https://wa.link/2ebre2" target="_blank" class="whatsapp-button" id="whatsapp-button">
+      <i class="bi bi-whatsapp"></i>
+      <span class="whatsapp-tooltip" data-i18n="whatsapp_tooltip">¡Chatea con nosotros!</span>
     </a>
 
 </body>
