--- a/lucid.html
+++ b/lucid.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>Lucid - Decisiones Empresariales Objetivas | Elimina Sesgos Cognitivos</title>
+    <title>Lucid™ - Decisiones Empresariales Objetivas | Elimina Sesgos Cognitivos</title>
 
-    <meta name="description" content="Toma decisiones más inteligentes con Lucid. Elimina automáticamente sesgos cognitivos, descubre puntos ciegos y mejora la calidad de tus decisiones estratégicas empresariales. Prueba gratis.">
+    <meta name="description" content="Toma decisiones más inteligentes con Lucid™. Elimina automáticamente sesgos cognitivos, descubre puntos ciegos y mejora la calidad de tus decisiones estratégicas empresariales. Prueba gratis.">
     <meta name="keywords" content="decisiones empresariales, sesgos cognitivos, análisis objetivo, toma de decisiones, liderazgo, consultoría, RRHH, legal">
 
     <!-- Google tag (gtag.js) -->
@@ -260,7 +260,9 @@
           
                 <!-- Toggle de idioma -->
                 <li>
-                    <button id="lang-toggle" class="btn-lang">ES / EN</button>
+                    <button id="lang-toggle" class="btn-lang" title="Cambiar idioma / Change language">
+                      <i class="bi bi-globe2"></i>
+                    </button>
                   </li>
         </ul>
       </nav>
