--- a/about.html
+++ b/about.html
@@ -40,26 +40,6 @@
 
         gtag('config', 'G-MZZJHHYCTR');
     </script>
-<style>  
-  /* Language toggle button – minimal & subtle */
-  #lang-toggle {
-    background: none;
-    border: none;
-    color: var(--nav-color);
-    font-family: var(--nav-font);
-    font-size: 0.9rem;
-    margin-left: 35px;
-    padding: 0.25rem 0.5rem;
-    cursor: pointer;
-    transition: color 0.3s ease;
-  }
-  
-  #lang-toggle:hover,
-  #lang-toggle:focus {
-    color: var(--accent-color);
-    outline: none;
-  }
-      </style>
 
 <!-- Meta Pixel Code -->
 <script>
@@ -262,7 +242,9 @@
           
                 <!-- Toggle de idioma -->
                 <li>
-                    <button id="lang-toggle" class="btn-lang">ES / EN</button>
+                    <button id="lang-toggle" class="btn-lang" title="Cambiar idioma / Change language">
+                      <i class="bi bi-globe2"></i>
+                    </button>
                   </li>
         </ul>
       </nav>
@@ -290,7 +272,7 @@
   <!-- End Page Title -->
 
   <!-- Company History Section -->
-  <section id="company-history" class="about section">
+  <section id="company-history" class="about section particles-white-bg">
     <div class="container">
       <div class="row gy-4" data-aos="fade-up" data-aos-delay="100">
         <div class="col-lg-6">
@@ -341,7 +323,7 @@
     </div>
 
     <!-- Team Section -->
-    <section id="team" class="team section">
+    <section id="team" class="team section particles-white-bg">
       <div class="container">
         <div class="row justify-content-center text-center" data-aos="fade-up" data-aos-delay="100">
           <div class="col-lg-6">
@@ -577,10 +559,10 @@
     <script src="assets/js/cookies.js"></script>
 
 
-    <a href="https://wa.link/2ebre2" class="whatsapp-float" target="_blank" data-aos="fade-up">
-        <i class="bi bi-whatsapp whatsapp-icon"></i>
-        <span class="tooltip-text">Have a Question? Write Us</span>
-
+    <!-- WhatsApp Button -->
+    <a href="https://wa.link/2ebre2" target="_blank" class="whatsapp-button" id="whatsapp-button">
+      <i class="bi bi-whatsapp"></i>
+      <span class="whatsapp-tooltip" data-i18n="whatsapp_tooltip">¡Chatea con nosotros!</span>
     </a>
 
 </body>
