--- a/ccommerce.html
+++ b/ccommerce.html
@@ -720,9 +720,10 @@
     <!-- Main JS File -->
     <script src="assets/js/main.js"></script>
 
-    <a href="https://wa.link/2ebre2" class="whatsapp-float" target="_blank" data-aos="fade-up">
-        <i class="bi bi-whatsapp whatsapp-icon"></i>
-        <span class="tooltip-text">Have a Question? Write Us</span>
+    <!-- WhatsApp Button -->
+    <a href="https://wa.link/2ebre2" target="_blank" class="whatsapp-button" id="whatsapp-button">
+      <i class="bi bi-whatsapp"></i>
+      <span class="whatsapp-tooltip" data-i18n="whatsapp_tooltip">¡Chatea con nosotros!</span>
     </a>
     <div id="videoModal" class="modal">
         <div class="modal-content">
