--- a/cursos.html
+++ b/cursos.html
@@ -243,7 +243,9 @@
 
                     <!-- Toggle de idioma -->
                     <li>
-                        <button id="lang-toggle" class="btn-lang">ES / EN</button>
+                        <button id="lang-toggle" class="btn-lang" title="Cambiar idioma / Change language">
+                          <i class="bi bi-globe2"></i>
+                        </button>
                     </li>
                 </ul>
             </nav>
@@ -983,10 +985,10 @@
         });
     </script>
 
-    <!-- Añade esto justo antes del cierre de tu <body> -->
-    <a href="https://wa.link/2ebre2" target="_blank" class="whatsapp-float">
-        <i class="bi bi-whatsapp whatsapp-icon"></i>
-        <span class="whatsapp-tooltip" data-i18n="whatsapp">Charla con nosotros ahora</span>
+    <!-- WhatsApp Button -->
+    <a href="https://wa.link/2ebre2" target="_blank" class="whatsapp-button" id="whatsapp-button">
+      <i class="bi bi-whatsapp"></i>
+      <span class="whatsapp-tooltip" data-i18n="whatsapp_tooltip">¡Chatea con nosotros!</span>
     </a>
 
 <!-- Modal AISP -->
