agregue mi foto nueva

--- a/about.html
+++ b/about.html
@@ -389,7 +389,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="500">
             <div class="team-member">
               <div class="member-img">
-                <img src="assets/img/team/maxi acri.png" class="img-fluid" alt="">
+                <img src="assets/img/team/maximilianoacri.jpg" class="img-fluid" alt="">
                 <div class="social">
                   <a href="https://www.linkedin.com/in/maximilianoeacri/"><i class="bi bi-linkedin"></i></a>
                 </div>
